--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: GOGOgadget
 Type: Package
-Title: What the Package Does (Title Case)
+Title: construct database for your organism and pick matching from your analysis sets.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Xiaoping Li
+Maintainer: The package maintainer <xioli2013@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
