--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: construct database for your organism and pick matching from your analysis
 Version: 0.1.0
 Author: Xiaoping Li
 Maintainer: The package maintainer <xioli2013@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: DBconstruct(), GOGOpick(), GOGOscavenger(), GOGOsummerise(), GOGOselect()
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
