--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,10 @@ Version: 0.1.0
 Author: Xiaoping Li
 Maintainer: The package maintainer <xioli2013@gmail.com>
 Description: DBconstruct(), GOGOpick(), GOGOscavenger(), GOGOsummerise(), GOGOselect()
+Imports: KEGGREST
+Imports: UniProt.ws
+Imports: biomartr
+Imports: dplyr
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
