--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(DBconstruct)
 export(GOGOpick)
 export(GOGOscavenger)
+export(GOGOsummary)
 import(KEGGREST)
+import(RColorBrewer)
 import(UniProt.ws)
 import(biomartr)
 import(dplyr)
+import(ggplot2)
