--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,9 @@ Imports:
         KEGGREST, 
         UniProt.ws, 
         biomartr,
-        dplyr
+        dplyr,
+        ggplot2,
+        RColorBrewer
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
